--- a/src/stylesheets/_custom.scss
+++ b/src/stylesheets/_custom.scss
@@ -1,14 +1,15 @@
 // THEME COLORS 
-$teal-dark:    #0d503c;
-$teal-light:  #20c997;
-$orange: #fd7e14;
+$teal-dark:    #4E6C51;
+$teal-light:  #83BC88;
+$orange: #000000;
 $footer: #151414;
 
 $primary: $teal-dark;
 $secondary: $teal-light;
 
+
 // ACCORDION OVERRIDES
-$accordion-padding-y: 1.5rem;
+$accordion-padding-y: 3rem;
 $accordion-padding-x: 1.5rem;
 $accordion-icon-color: $primary; 
 $accordion-icon-active-color: $secondary;
