--- a/src/stylesheets/components/_typography.scss
+++ b/src/stylesheets/components/_typography.scss
@@ -7,10 +7,12 @@
   &--intro {
     display: inline-block;
     font-weight: 700;
+    font-family:Georgia, 'Times New Roman', Times, serif;
   }
 
   &--description {
     font-size: 1rem;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
     display: block;
     margin-top: 1.2rem;
     text-transform: none;
@@ -45,7 +47,8 @@
 
 .display-3 {
   &--title {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-transform: capitalize;
     font-weight: 600;
     display: inline-block;
